Updated tutorial and moved example files to chest directory

--- a/doc/tutorial/tutorial.ipynb
+++ b/doc/tutorial/tutorial.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = Path('./tutorial_qdm_data/')\n",
+    "data_path = Path('../chest/tutorial_qdm_data/')\n",
     "\n",
     "# location and name of QDM and cuboid file\n",
     "QDMfile = data_path / 'class_QDM_result2.txt'\n",
