Renamed project to mmt_dipole_inverse. Added MIT license.

--- a/doc/tutorial/tutorial.ipynb
+++ b/doc/tutorial/tutorial.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dipole_inverse_tools import set_max_num_threads\n",
+    "from mmt_dipole_inverse_tools import set_max_num_threads\n",
     "set_max_num_threads(6)"
    ]
   },
@@ -40,7 +40,7 @@
     "import numpy as np\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
-    "import dipole_inverse as dpinv"
+    "import mmt_dipole_inverse as dpinv"
    ]
   },
   {
@@ -270,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `dipole_inverse` library includes a powerful and modular way of generating plots from the inversion results and the cuboid/grain information."
+    "The `mmt_dipole_inverse` library includes a powerful and modular way of generating plots from the inversion results and the cuboid/grain information."
    ]
   },
   {
@@ -279,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dipole_inverse import plot_tools as dpi_pt"
+    "from mmt_dipole_inverse import plot_tools as dpi_pt"
    ]
   },
   {
