--- a/test/test_single_dipole_vs_depth.ipynb
+++ b/test/test_single_dipole_vs_depth.ipynb
@@ -12,7 +12,7 @@
     "import time\n",
     "import matplotlib.pyplot as plt\n",
     "set_max_num_threads(4)\n",
-    "import dipole_inverse as dpinv  # noqa: E402"
+    "import mmt_dipole_inverse as dpinv  # noqa: E402"
    ]
   },
   {
