--- a/test/test_single_dipole_vs_depth.ipynb
+++ b/test/test_single_dipole_vs_depth.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dipole_inverse_tools import set_max_num_threads\n",
+    "from dipole_inverse.tools import set_max_num_threads\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
     "import time\n",
@@ -308,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
