Fixed plot tools with new scan variable name. Updated tutorials

--- a/doc/tutorial/tutorial.ipynb
+++ b/doc/tutorial/tutorial.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In this tutorial we analyze the magnetic signal of a set of grains using Quantum Diamond Microscopy data and tomographic data. The former contains the magnetic signal of the grains and the latter both the position and geometry of every grain in the sample. The magnetic signal computed by the `Dipole` class of this library is in units of field per sensor area, i.e. `Tesla * m^2`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Import base libraries"
    ]
   },
@@ -54,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We first specify the location of the scan data and the tomographic data with the cuboid positions and dimensions."
+    "We first specify the location of the QDM scan data and the tomographic data with the cuboid positions and dimensions."
    ]
   },
   {
@@ -246,6 +253,13 @@
    ],
    "source": [
     "mag_svd.Forward_G"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results"
    ]
   },
   {
